--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react_ujs": "^2.6.2",
     "style-loader": "^3.3.1",
+    "styled-components": "^5.3.8",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
