--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react_ujs": "^2.6.2",
     "style-loader": "^3.3.1",
